<resources>
    <string name="app_name">ManillasApp</string>
    <string name="titulo">Manillas XYZ</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="moneda">Moneda</string>
    <string name="resultado">Resultado</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="oro_rosado">Oro Rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string name="dolar">US</string>
    <string name="pesos">COP</string>
    <string name="cotizar">Cotizar</string>
    <string name="cantidad_manillas">Ingrese cantidad de manillas</string>
    <string name="cantidad_manillas_cero">Ingrese un número mayor que 0</string>
    <string name="limpiar">Limpiar</string>

    <string-array name="material">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>

    <string-array name="dije">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>

    <string-array name="tipo">
        <item>@string/oro</item>
        <item>@string/oro_rosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>

    <string-array name="moneda">
        <item>@string/dolar</item>
        <item>@string/pesos</item>
    </string-array>
</resources>