<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="cotizar"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dije"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moneda"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:hint="@string/resultado"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCotizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cotizar"
            android:text="@string/cotizar" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/limpiar" />

    </LinearLayout>

</LinearLayout>